--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   run-tests:
-    name: Run main.py test runner
+    name: Run bubble_sort smoke tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository (full history)
@@ -25,5 +25,45 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Run lightweight test runner
-        run: python3 main.py
+      - name: Run bubble_sort.py smoke tests (non-interactive)
+        run: |
+          # Run a short, non-interactive test suite against bubble_sort.py's API.
+          # This avoids invoking the CLI interactively (no prompts).
+          python3 - <<'PY'
+          import sys
+          try:
+              import bubble_sort
+          except Exception as e:
+              print("Failed to import bubble_sort.py:", e)
+              sys.exit(2)
+
+          try:
+              # basic ascending
+              assert bubble_sort.bubble_sort([3,1,2]) == [1,2,3], "ascending failed"
+              # descending
+              assert bubble_sort.bubble_sort([1,2,3], reverse=True) == [3,2,1], "reverse failed"
+              # in-place behavior
+              lst = [4,2,1]
+              res = bubble_sort.bubble_sort(lst, in_place=True)
+              assert res is lst and lst == [1,2,4], "in_place failed"
+              # non-iterable should raise TypeError
+              try:
+                  bubble_sort.bubble_sort(123)
+                  raise AssertionError("non-iterable did not raise")
+              except TypeError:
+                  pass
+              # incomparable types should raise TypeError
+              try:
+                  bubble_sort.bubble_sort([1, "a"])
+                  raise AssertionError("mixed types did not raise")
+              except TypeError:
+                  pass
+          except AssertionError as ae:
+              print("AssertionError:", ae)
+              sys.exit(2)
+          except Exception as e:
+              print("Unhandled exception during tests:", e)
+              raise
+          print("All bubble_sort.py smoke tests passed")
+          sys.exit(0)
+          PY
